# to-do-lists

./: .gitignore  README.md
fastapi/: .env.sample  README.md  pyproject.toml
fastapi/app/: models.py
fastapi/fastapi/: crud.py  main.py  models.py  schemas.py
fastapi/todo/: crud.py  main.py  models.py  schemas.py
golang/pure/: README.md
golang/pure/.devcontainer/: devcontainer.json  docker-compose.yml
golang/pure/pure/: go.mod
